--- a/assets/css/secondary-style.css
+++ b/assets/css/secondary-style.css
@@ -1,4 +1,4 @@
-.hero {
+/* .hero {
     background-position: bottom;
     height: auto;
     text-align: center;
@@ -19,4 +19,4 @@
     width: 80%;
     margin: center;
     
-}
+} */
