--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,28 +151,19 @@ header h1 {
  }
 
 
- .intro p {
-   /* add this alongside your other declarations */
-   margin: 0 auto;
-   line-height: 1.7;
-   color: #39a6b2;
-   width: 80%;
-   font-size: 20px;
- }
-
  /* what you do styling */
 
  .steps {
-   text-align: center;
    background: #fce138;
  }
 
 .section-title {
+   padding-bottom: 20px;
+   text-align: center;
+   margin: 0 auto 35px auto;
+   width: 50%;
    font-size: 55px;
    color: #024e76;
-   margin-bottom: 35px;
-   padding: 0 100px 20px 100px;
-   display: inline-block;
    border-bottom: 3px solid;
 }
 
@@ -210,9 +201,9 @@ header h1 {
 
 /* trainers styling  */
 
-.trainers {
-   text-align: center;
-}
+/* .trainers {
+   
+} */
 
 .trainer {
    width: 900px;
@@ -260,7 +251,6 @@ header h1 {
 /* REACH OUT STYLES START */
 
 .contact {
-   text-align: center;
    background-color: #024e76;
 }
 
@@ -299,3 +289,7 @@ header h1 {
 }
 
 /* REACH OUT STYLES END */
+
+.flex-row {
+   display: flex;
+}
