--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,17 @@ header h1 {
    background: #fce138;
  }
 
+ .step {
+   margin: 50px auto;
+   padding-bottom: 50px;
+   width: 80%;
+   border-bottom: 1px solid #39a6b2;
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: space-between;
+ }
+
 .section-title {
    padding-bottom: 20px;
    text-align: center;
@@ -175,28 +186,42 @@ header h1 {
    border-color: #39a6b2;
 }
  
-.steps div {
-   margin-bottom: 80px;
-}
 
-.steps img {
-   width: 15%;
-   margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
+   flex: 1 30%;
    color: #024e76;
    font-size: 46px;
-   margin-top: 10px;
 }
 
-.steps p {
+.step-info {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   flex: 2 70%;
+}
+
+.step-text p {
    color: #39a6b2;
-   font-size: 23px;
+   font-size: 18px;
 }
 
-.steps span {
-   font-size: 38px;
+.step-text h4 {
+   font-size: 26px;
+   line-height: 1.5;
+   color: #024e76;
+}
+
+.step-img {
+   flex: 1 12%;
+   margin-right: 20px;
+}
+
+.step-text {
+   flex: 12;
+}
+
+.step-img img {
+   max-width: 100%;
 }
 
 /* trainers styling  */
