--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,25 @@ body {
 }
 
 header {
+    background-image: url("../images/hero-bg1.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px 35px;
     background-color: #39a6b2;
+    position: sticky;
+    top: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 header h1 {
+   /* add alongside your existing declarations */
+   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
@@ -45,6 +56,8 @@ header h1 {
  }
 
  header nav ul li a {
+   /* add alongside your existing declarations */
+   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
@@ -87,7 +100,8 @@ header h1 {
    flex-wrap: wrap;
    background-image: url("../images/hero-bg1.jpg");
    background-size: cover;
-   background-position: center;
+   background-attachment: fixed;
+   background-position: 80%;
    align-items: flex-start;
  }
 
@@ -118,6 +132,8 @@ header h1 {
    line-height: 1.2;
  }
  .hero-cta h2 {
+   /* add alongside your existing declarations */
+   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    font-style: italic;
    font-size: 55px;
    color: #fce138;
@@ -131,10 +147,20 @@ header h1 {
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
+   border-radius: 10px;
+   background-color: rgba(255,255,255, 0.75);
+ }
+
+ .form-input:focus {
+   background-color: rgba(255,255,255, 1);
+   outline: none;
  }
 
  .hero-form {
+   /* add alongside your existing declarations */
+   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    margin: o 5px;
+   border-radius: 15px;
  }
 
  .hero-form button {
@@ -143,6 +169,7 @@ header h1 {
    border: none;
    padding: 10px 20px;
    font-size: 16px;
+   border-radius: 10px;
  }
  /* Hero Style End */
 
@@ -162,11 +189,18 @@ header h1 {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
-   border-bottom: 1px solid #39a6b2;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
+ }
+
+ .step:last-child {
+   border-bottom: 1px solid #39a6b2;
+ }
+
+ .step:nth-child(even) {
+   border-bottom: 1px solid #39a6b2;
  }
 
 .section-title {
@@ -322,7 +356,17 @@ header h1 {
    width: 100%;
    margin-bottom: 15px;
    margin-top: 5px;
+   border-radius: 10px;
+   background-color: rgba(255,255,255, 0.75)
+
 }
+
+.contact-form input, .contact-form textarea:focus  {
+   background-color: rgba(255,255,255, 1);
+   outline: none;
+}
+
+
 
 .contact-form button {
    width: 100%;
@@ -332,6 +376,12 @@ header h1 {
    text-align: center;
    padding: 15px 0;
    font-size: 16px;
+   border-radius: 10px;
+}
+
+.contact-from button:hover {
+   color: #fce138;
+   background: #39a6b2;
 }
 
 /* REACH OUT STYLES END */
@@ -344,6 +394,7 @@ header h1 {
 
 @media screen and (max-width: 900px) {
    header {
+      position: relative;
       padding-bottom: 0;
       justify-content: center;
    }
@@ -362,6 +413,12 @@ header h1 {
       font-size: 20px;
     }
 
+    header nav ul li a:hover {
+      background: #fce138;
+      color: #024e76;
+      border-radius: none;
+    }
+
     footer h2, footer div {
       text-align: center;
       width: 100%;
@@ -369,6 +426,10 @@ header h1 {
 
     .hero-cta, .hero-form {
       width: 100%;
+    }
+
+    .hero-form button:hover {
+      background-color: #39a6b2;
     }
 
     .hero-cta {
