--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+   --primary-color: #fce138;
+   --secondary-color: #024e76;
+   --tertiary-color: #39a6b2;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,11 +11,12 @@
 }
 
 body {
-    color: #39a6b2 ;
+    color: var(--tertiary-color) ;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
+    z-index: 9999;   
     background-image: url("../images/hero-bg1.jpg");
     background-size: cover;
     background-attachment: fixed;
@@ -18,7 +25,7 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     position: sticky;
     top: 0;
     position: -webkit-sticky;
@@ -31,12 +38,12 @@ header h1 {
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
 }
  header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
  }
 
  header nav {
@@ -73,7 +80,7 @@ header h1 {
  }
 
  footer h2 {
-    color: #024e76;
+    color: var(--secondary);
     font-size: 30px;
     margin: 0;
  }
@@ -84,7 +91,7 @@ header h1 {
  }
 
  footer a {
-    color: #024e76;
+    color: var(--secondary);
  }
 
  section {
@@ -171,6 +178,68 @@ header h1 {
    font-size: 16px;
    border-radius: 10px;
  }
+
+ .checkbox-wrapper input, .radio-wrapper input {
+   opacity: 0;
+ }
+
+ .checkbox-wrapper label, .radio-wrapper label {
+   position: relative;
+   left: 10px;
+   margin: 10px;
+   line-height: 1.6;
+ }
+
+ .checkbox-wrapper label::before, .radio-wrapper label::before {
+   content: "";
+   height: 20px;
+   width: 20px;
+   background: rgba(255, 255, 255, 0.75);
+   border: 1px solid #024e76;
+   position: absolute;
+   top: -4px;
+   left: -30px;
+ }
+
+ .radio-wrapper label::before {
+   border-radius: 50%;
+ }
+
+ .radio-wrapper label::after {
+   content: "";
+   width: 20px;
+   height: 20px;
+   border-radius: 50%;
+   background: #024e76;
+   position: absolute;
+   left: -29px;
+   top: -3px;
+   background-image: radial-gradient(circle, #39a6b2, #024e76);
+ }
+
+ .checkbox-wrapper label::after {
+   content: "";
+   height: 6px;
+   width: 14px;
+   border-left: 2px solid #024e76;
+   border-bottom: 2px solid #024e76;
+   position: absolute;
+   left: -26px;
+   top: 1px;
+   transform: rotate(-58deg);
+ }
+
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after {
+   content: none;
+}
+
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after {
+   content: "";
+}
+
+
  /* Hero Style End */
 
  /* What we do styling */
